tests/ui/union-not-struct.stderr
error: TypeStateBuilder only supports structs, not unions
 --> tests/ui/union-not-struct.rs:5:1
  |
5 | / union NotAStruct {
6 | |     field1: u32,
7 | |     field2: f32,
8 | | }
  | |_^
